test/corpus/placeholders.txt
==================
Placeholders
https://caddyserver.com/docs/caddyfile/concepts#placeholders
==================

:4001 {
	reverse_proxy localhost:9229 {
		
        header_up x-tls-version "{tls_version}"
		header_up x-tls-version "^{tls_version}$" ""

		header_up x-tls-client-subject "{tls_client_subject}"
		header_up x-tls-client-subject "^{tls_client_subject}$" ""

		header_up x-tls-client-serial "{tls_client_serial}"
		header_up x-tls-client-serial "^{tls_client_serial}$" ""

		header_up x-tls-client-issuer "{tls_client_issuer}"
		header_up x-tls-client-issuer "^{tls_client_issuer}$" ""

		header_up x-tls-client-fingerprint "{tls_client_fingerprint}"
		header_up x-tls-client-fingerprint "^{tls_client_fingerprint}$" ""

		header_up x-tls-client-certificate-pem "{tls_client_certificate_pem}"
		header_up x-tls-client-certificate-pem "^{tls_client_certificate_pem}$" ""

		header_up x-tls-client-certificate-der-base64 "{tls_client_certificate_der_base64}"
		header_up x-tls-client-certificate-der-base64 "^{tls_client_certificate_der_base64}$" ""

		header_up x-tls-cipher "{tls_cipher}"
		header_up x-tls-cipher "^{tls_cipher}$" ""

		header_up x-remote-port "{remote_port}"
		header_up x-remote-port "^{remote_port}$" ""

		header_up x-remote-host "{remote_host}"
		header_up x-remote-host "^{remote_host}$" ""

		header_up x-method "{method}"
		header_up x-method "^{method}$" ""

		header_up x-client-ip "{client_ip}"
		header_up x-client-ip "^{client_ip}$" ""

		header_up x-duration-ms {http.request.duration}
		header_up x-duration-ms "^{http.request.duration}$" ""

		header_up x-tls-resumed "{http.request.tls.resumed}"
		header_up x-tls-resumed "^{http.request.tls.resumed}$" ""

		header_up x-tls-proto "{http.request.tls.proto}"
		header_up x-tls-proto "^{http.request.tls.proto}$" ""

		header_up x-tls-proto-mutual "{http.request.tls.proto_mutual}"
		header_up x-tls-proto-mutual "^{http.request.tls.proto_mutual}$" ""

		header_up x-tls-server-name "{http.request.tls.server_name}"
		header_up x-tls-server-name "^{http.request.tls.server_name}$" ""

		header_up x-tls-public-key "{http.request.tls.public_key}"
		header_up x-tls-public-key "^{http.request.tls.public_key}$" ""

		header_up x-tls-public-key-sha256 "{http.request.tls.public_key_sha256}"
		header_up x-tls-public-key-sha256 "^{http.request.tls.public_key_sha256}$" ""

		header_up x-tls-client-san-dns-names "{http.request.tls.client.san.dns_names}"
		header_up x-tls-client-san-dns-names "^{http.request.tls.client.san.dns_names}$" ""

		header_up x-tls-client-san-emails "{http.request.tls.client.san.emails}"
		header_up x-tls-client-san-emails "^{http.request.tls.client.san.emails}$" ""

		header_up x-tls-client-san-ips "{http.request.tls.client.san.ips}"
		header_up x-tls-client-san-ips "^{http.request.tls.client.san.ips}$" ""

		header_up x-tls-client-san-uris "{http.request.tls.client.san.uris}"
		header_up x-tls-client-san-uris "^{http.request.tls.client.san.uris}$" ""
	}

	log {
		format json
	}

}

---

(source_file
  (server
    (address)
    (block
      (directive
        (keyword)
        (value)
        (block
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (placeholder))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder)))
          (directive
            (keyword)
            (value)
            (string_literal
              (placeholder))
            (string_literal))))
      (directive
        (keyword)
        (block
          (directive
            (keyword)
            (value)))))))
